<resources>
    <string name="app_name">consumerapp</string>

    <string name="user_name">Name : %s</string>
    <string name="user_repository">Detail</string>
    <string name="all_user_list">All user list</string>
    <string name="github_user">GitHub User</string>
    <string name="kamis_20_juni_2020">thursday, 20 juni 2020</string>
    <string name="github_user_1">GITHUB USER</string>
    <string name="find_all_github_users_and_repository_and_company_data">find all github users and repository and company data</string>
    <string name="follower">Follower : %s</string>
    <string name="_20">20</string>
    <string name="_2">2</string>
    <string name="following">Following : %s</string>
    <string name="location">location</string>
    <string name="bio">My name is fitri ananda I am a student at aceh university who has free time to work as a baby sitter, I already have 2 year of experience as a baby sitter and I am sure that I can work well, I have an honest, friendly and responsible person.</string>
    <string name="location_1">Location : jl . dsdfs</string>
    <string name="username">username: intant_sari</string>
    <string name="gambar">Image</string>
    <string name="intan_sari">Intan sari</string>
    <string name="repository">Repository : %s</string>
    <string name="slash">/</string>
    <string name="company_asus">company : asus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="username2">username</string>
    <string name="location2">location : %s</string>
    <string name="company2">company : %s</string>

    <string name="change_language_settings">Change Language Settings</string>
    <string name="search">Search Here</string>
    <string name="favorite">favorite</string>

    <string name="following1">Folowwing</string>
    <string name="follower1">Follower</string>
    <string name="reminder">Reminder Setting</string>
    <string name="daily">Daily Reminder</string>
    <string name="setting_string">Setting</string>
    <string name="reminder_message">Find you favorite user on github</string>
</resources>